--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,14 @@
           <version>4.5.8</version>
       </dependency>
 
+      <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-graphics -->
+      <dependency>
+          <groupId>org.openjfx</groupId>
+          <artifactId>javafx-graphics</artifactId>
+          <version>19-ea+3</version>
+      </dependency>
+
+
   </dependencies>
 
 </project>
