--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,14 @@
           <version>19-ea+3</version>
       </dependency>
 
+      <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-text -->
+      <dependency>
+          <groupId>org.apache.commons</groupId>
+          <artifactId>commons-text</artifactId>
+          <version>1.9</version>
+      </dependency>
+
+
   </dependencies>
 
 </project>
