STRUCTURAL PATTERN - BEHAVIORAL PATTERNS - Mediator

--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,14 @@
           <version>1.9</version>
       </dependency>
 
+      <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-controls -->
+      <dependency>
+          <groupId>org.openjfx</groupId>
+          <artifactId>javafx-controls</artifactId>
+          <version>19-ea+5</version>
+      </dependency>
+
+
 
   </dependencies>
 
